@@ -21,13 +21,14 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: Src.pm,v 1.2 2001/04/02 07:53:39 mej Exp $
+# $Id: Src.pm,v 1.3 2001/04/17 03:20:47 mej Exp $
 #
 
 package Avalon::Srctool;
 
 BEGIN {
     use Exporter   ();
+    use File::Copy;
     use Avalon::Util;
     use vars ('$VERSION', '@ISA', '@EXPORT', '@EXPORT_OK', '%EXPORT_TAGS');
 
@@ -36,7 +37,9 @@ BEGIN {
 
     @ISA         = ('Exporter');
     # Exported functions go here
-    @EXPORT      = ('$WORK_DIR', '$TMP_DIR', '&install_spm_files');
+    @EXPORT      = ('$WORK_DIR', '$TMP_DIR', 
+                    '&find_files', '&find_subdirs', '&install_spm_files', '&create_temp_space', '&clean_temp_space',
+                    '&run_cmd', '&run_av_cmd');
     %EXPORT_TAGS = ( );
 
     # Exported variables go here
@@ -55,7 +58,13 @@ $TMP_DIR = "/var/tmp/srctool.$$";
 ### Initialize private global variables
 
 ### Function prototypes
+sub find_files($);
+sub find_subdirs($);
 sub install_spm_files($);
+sub create_temp_space($$);
+sub clean_temp_space();
+sub run_cmd($$$);
+sub run_av_cmd($$$);
 
 # Private functions
 
@@ -64,6 +73,40 @@ END {
 }
 
 ### Function definitions
+
+# Return the files in a particular directory
+sub
+find_files($)
+{
+    my $dir = $_[0];
+    my @files;
+
+    return @files if (! -d $dir);
+    @files = &grepdir(sub {-f "$dir/$_" && $_ !~ /^\./}, $dir);
+    if (scalar(@files)) {
+        foreach my $f (0..$#files) {
+            $files[$f] = "$dir/$files[$f]";
+        }
+    }
+    return @files;
+}
+
+# Return the subdirectories in a particular directory
+sub
+find_subdirs($)
+{
+    my $dir = $_[0];
+    my @subdirs;
+
+    return @files if (! -d $dir);
+    @subdirs = &grepdir(sub {-d "$dir/$_" && $_ !~ /^\./}, $dir);
+    if (scalar(@subdirs)) {
+        foreach my $f (0..$#subdirs) {
+            $subdirs[$f] = "$dir/$subdirs[$f]";
+        }
+    }
+    return @subdirs;
+}
 
 # Copy source files into place
 sub
@@ -82,23 +125,110 @@ install_spm_files($)
 	&fatal_error("$n spec files?!\n");
     }
     $spec = $tmp[0];
+    undef @tmp;
+    push @tmp, @srcs if (scalar(@srcs));
+    push @tmp, @patches if (scalar(@patches));
 
     # Copy all the files into their proper places for RPM's use
-    foreach my $f (@srcs, @patches) {
+    foreach my $f (@tmp) {
         my $fname;
 
         ($fname = $f) =~ s/^.\///;
-	if (!link($f, "$dir/SOURCES/$fname")) {
+	if (!copy($f, "$dir/SOURCES/$fname")) {
 	    eprint "Unable to copy $f into $dir/SOURCES -- $!\n";
 	    return 0;
 	}
     }
     ($tmp = $spec) =~ s/^.\///;
-    if (!link($spec, "$dir/SPECS/$tmp")) {
+    if (!copy($spec, "$dir/SPECS/$tmp")) {
 	eprint "Unable to copy $spec into $dir/SPECS -- $!\n";
 	return 0;
     }
     return $spec;
+}
+
+# Create temporary working space in /var/tmp
+sub
+create_temp_space($$)
+{
+    my ($pkg, $type) = @_;
+    my ($dir, $d);
+    my @dirlist;
+
+    $dir = "$TMP_DIR/$pkg";
+    &nuke_tree($dir);
+    &mkdirhier($dir) || return "";
+    if ($type eq "SPM") {
+	@dirlist = ("S", "P", "F");
+    } elsif ($type eq "build") {
+	@dirlist = ("BUILD", "SOURCES", "SRPMS", "RPMS", "SPECS");
+    }
+    foreach $d (@dirlist) {
+	if (!&mkdirhier("$dir/$d")) {
+	    eprint "Creation of $dir/$d failed -- $!\n";
+	    return "";
+	}
+    }
+    return $dir;
+}
+
+# Clean up temp space
+sub
+clean_temp_space()
+{
+    return &nuke_tree($TMP_DIR);
+}
+
+# Generic wrapper to grab command output
+sub
+run_cmd($$$)
+{
+    my ($prog, $params, $show_output) = @_;
+    my ($err, $msg, $line, $cmd) = undef;
+    my @output;
+    local *CMD;
+
+    $cmd = "$prog $params";
+
+    dprint "About to run $cmd\n";
+    if (!open(CMD, "$cmd 2>&1 |")) {
+        return (-1, "Execution of \"$cmd\" failed -- $!");
+    }
+    while (<CMD>) {
+        chomp($line = $_);
+        push @output, $line;
+        if ($show_output) {
+            print "$show_output$line\n";
+        } else {
+            dprint "From $prog -> $line\n";
+        }
+    }
+    close(CMD);
+    $err = $? >> 8;
+    dprint "\"$cmd\" returned $err\n";
+    return ($err, @output);
+}
+
+# Wrapper for Avalon commands specifically
+sub
+run_av_cmd($$$)
+{
+    my ($prog, $params, $show_output) = @_;
+    my ($err, $msg, $line, $cmd) = undef;
+    my (@output, @tmp);
+
+    $params = "--debug $params" if ($debug);
+    @output = &run_cmd($prog, $params, $show_output);
+    $err = shift @output;
+    if ($err) {
+        my @tmp;
+
+        @tmp = grep(/^\w+:\s*error:\s*(\S.*)$/i, @output);
+        if (scalar(@tmp)) {
+            $msg = $tmp[$#tmp];
+        }
+    }
+    return ($err, ($show_output ? $msg : @output));
 }
 
 ### Private functions
